--- a/app/views/dashboards/dashboard.js.erb
+++ b/app/views/dashboards/dashboard.js.erb
@@ -47,6 +47,11 @@ $(document).ready(function(){
 				});
 		});
 		
+		<% apps.show_hr_notes.each do |hrc| %>
+			
+			
+		<% end %>
+
 		
 	<% end %>
 
