--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -1,5 +1,20 @@
 <div class="left-dashboard">
-	<%= link_to image_tag('resumeQuery_white.png'), root_path %>
-	<li><%= link_to 'User Settings', edit_user_registration_path %></li>
-	<li><%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %></li> 
+	<div class="logo">
+		<%= link_to image_tag('resumeQuery_white.png'), root_path %>
+	</div>
+
+	<div class="user-area">
+		<b><%= current_user.first_name %> <%= current_user.last_name %></b><br />
+		<%= current_user.email %><br />
+		
+		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp
+		<%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %>
+	</div>
+	
+	<div class="menu-area">
+		<ul class="unstyled">
+			<li>All Jobs Open</li>
+			<li>Companies List</li>
+		</ul>
+	</div>
 </div>
