--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -3,18 +3,27 @@
 		<%= link_to image_tag('resumeQuery_white.png'), root_path %>
 	</div>
 
-	<div class="user-area">
-		<b><%= current_user.first_name %> <%= current_user.last_name %></b><br />
-		<%= current_user.email %><br />
-		
-		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp
-		<%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %>
-	</div>
+
 	
 	<div class="menu-area">
 		<ul class="unstyled">
-			<li>All Jobs Open</li>
-			<li>Companies List</li>
+			<%= link_to root_path do %>
+				<li><i class="icon-pencil"></i> &nbsp Apps Dashboard</li>
+			<% end %>
+			<%= link_to jobs_path do %>
+				<li><i class="icon-briefcase"></i> &nbsp All Jobs Open</li>
+			<% end %>
+			<%= link_to companies_path do %>
+				<li><i class="icon-certificate"></i> &nbspCompanies List</li>
+			<% end %>
 		</ul>
+	</div>
+	
+	<div class="user-area">
+		<b><%= current_user.first_name %> <%= current_user.last_name %></b><br />
+		<%= current_user.email %><br />
+		<br />
+		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp &nbsp
+		<%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %>
 	</div>
 </div>
