--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -10,7 +10,7 @@
 	<% else %>
 
 		<div class="app-title">
-			<h3>Job Apps Basket</h3>
+			<h3>Your Apps Dashboard</h3>
 		</div>
 		
 		<% @appList.each do |apps| %>
