--- a/app/views/dashboards/dashboard.js.erb
+++ b/app/views/dashboards/dashboard.js.erb
@@ -1,6 +1,6 @@
 $(document).ready(function(){
 
-
+	$(".left-dashboard").css("overflow","hidden");
 	<% @appList.each do |apps| %>
 		
 		<%# Click on the app-line area to pull it down %>
