--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -14,8 +14,9 @@
 				<li><i class="icon-briefcase"></i> &nbsp All Jobs Open</li>
 			<% end %>
 			<%= link_to companies_path do %>
-				<li><i class="icon-certificate"></i> &nbspCompanies List</li>
+				<li><i class="icon-certificate"></i> &nbsp Companies List</li>
 			<% end %>
+			<li><i class="icon-wrench"></i> &nbsp Site Suggestions</li>
 		</ul>
 	</div>
 	
@@ -23,7 +24,7 @@
 		<b><%= current_user.first_name %> <%= current_user.last_name %></b><br />
 		<%= current_user.email %><br />
 		<br />
-		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp &nbsp
+		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp &nbsp &nbsp
 		<%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %>
 	</div>
 </div>
