--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,7 +149,7 @@ input {
 .editer {
 	background-color:$background-grey;
 	border:1px solid $line-grey;
-	border-left:6px solid #165468;
+	border-right:6px solid #165468;
 	margin-bottom: $standard-padding;
 }
 
