--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -104,7 +104,7 @@ input {
 	li:hover{
 		background-color:$dark-green;
 		color:white;
-		border-right:7px solid black;
+		/*border-right:7px solid black;*/
 	}
 }
 
