--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -80,8 +80,8 @@ input {
 .user-area{
 	background-color:$light-green;
 	margin-left:-25px;
-	border-top:1px solid $top-green;
-	border-bottom:1px solid $top-green;
+	border-top:5px solid $dark-green;
+	border-bottom:1px solid $dark-green;
 	padding:$standard-padding 5px $standard-padding 25px;
 	font-size:11px;
     box-shadow: 0 4px 10px -5px $dark-grey;
