--- a/app/views/dashboards/dashboard.js.erb
+++ b/app/views/dashboards/dashboard.js.erb
@@ -1,5 +1,7 @@
 $(document).ready(function(){
-
+	
+	//Yeah if you're reading this code - sorry for the eyesore. -Pash
+	
 	$(".left-dashboard").css("overflow","hidden");
 	<% @appList.each do |apps| %>
 		
