--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,6 +85,9 @@ input {
 	padding:$standard-padding 5px $standard-padding 25px;
 	font-size:11px;
     box-shadow: 0 4px 10px -5px $dark-grey;
+	a:hover{
+		color:$base-green !important;
+	};
 }
 
 
@@ -112,7 +115,6 @@ input {
 	box-shadow: 0 4px 10px -5px $dark-grey;
 	background-color:$base-green;
 	min-height:700px;
-	width:180px;
 	height:auto;
 
 	padding-left:25px;
