--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 	  <%= favicon_link_tag 'favicon.ico' %>
 	</head>
 	<body>
+		<!-- Yeah if you're reading this code, sorry for the eyesore -Pashpops -->
+		<!-- Alternatively if you're keen on making this code & whole project more awesome, email us: pasha.rayan@gmail.com -->		
 		<% if signed_in? %>
 			<div class="container-fluid">
 				<div class="row-fluid">
