--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -11,10 +11,10 @@
 				<li><i class="icon-pencil"></i> &nbsp Apps Dashboard</li>
 			<% end %>
 			<%= link_to jobs_path do %>
-				<li><i class="icon-briefcase"></i> &nbsp All Jobs Open</li>
+				<li><i class="icon-briefcase"></i> &nbsp  Jobs </li>
 			<% end %>
 			<%= link_to companies_path do %>
-				<li><i class="icon-certificate"></i> &nbsp Companies List</li>
+				<li><i class="icon-certificate"></i> &nbsp Companies </li>
 			<% end %>
 			<li><i class="icon-wrench"></i> &nbsp Bugs & Suggestions</li>
 		</ul>
