--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -16,7 +16,7 @@
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate"></i> &nbsp Companies </li>
 			<% end %>
-			<li><i class="icon-wrench"></i> &nbsp Bugs & Suggestions</li>
+			<li><i class="icon-wrench"></i> &nbsp Suggestions & Bugs</li>
 		</ul>
 	</div>
 	
