--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -20,7 +20,6 @@
 			<!-- This is shown initially -->
 			<div class="appManage" id="app-line-<%=apps.id%>">
 				<div class="row-fluid">	
-
 					<div class="span8">
 						<%= link_to '#',remote: true   do %>
 							<p><strong> <%= company.name %></strong> | 
@@ -51,29 +50,44 @@
 						<div class="span8 editer-main">
 							
 							<div class="editer-summary pad-all">
-								<div class="grey-text"><i class="icon-edit"></i> Your Description</div><br />
+								<div class="grey-text">
+									<i class="icon-edit"></i> Your Description
+									<% if apps.has_no_comment? %>
+									
+									<% else %>
+										<%= link_to 'Edit', '#', :class => "pull-right", :id => "edit-comment-button-#{apps.id}"%>
+									<% end %>
+									
+								</div><br />
+								
+								
 								
 								<% if apps.has_no_comment? %>
 									<%= form_for apps, :as => :applist, remote: true do |desc| %>
-										<%= desc.text_area :comments %>
+										<%= desc.text_area :comments, :placeholder => "Add your own summary about this job" %>
 										<%= desc.hidden_field :id, :value => apps.id %>
 										<%= desc.submit "Save Description", :class => "btn btn-success"%>
 									<% end %>
 									
 								<% else %>
-									<%= simple_format(apps.comments)%>
-									
+									<div id="show-comment-<%=apps.id %>">
+										<%= simple_format(apps.comments)%>
+									</div>
+									<div class="hide" id="edit-comment-<%=apps.id%>">
+										<%= form_for apps, :as => :applist, remote: true do |descedit| %>
+											<%= descedit.text_area :comments%>
+											<%= descedit.hidden_field :id, :value => apps.id %>
+											<%= descedit.submit "Save Description", :class => "btn btn-success"%>
+										<% end %>
+									</div>
 								<% end %>
-								
-								
-								
-								
+
 							</div>
 							
-						
-							
 							<div class="editer-job-comments pad-all">
-								<div class="grey-text"><i class="icon-list"></i> Make notes to remember useful things your application</div><br />
+								<div class="grey-text">
+									<i class="icon-list"></i> 
+									Make a note about the <%= company.name.pluralize %> <%= job.name %></div><br />
 								<% if apps.has_no_notes? %>
 									<%= apps.notes.count %>
 								<% else %>
