--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,12 +2,15 @@
 	<div class="row">
 		<div class="span6 jobIndex">
 			<h3>Companies List</h3>
+			<p class="grey-text"> <%= Company.count %> companies which offer  
+				worthwhile grad and internship jobs </p><br />
 			<ul class="unstyled">
 				<% @allCompanies.each do |c| %>
 					<%= link_to c do %>
 						<span class="big-font"><strong><%= c.name %></strong> </span><br />
+						<%= c.industry%> -
 						<% if c.has_number_of_jobs != 0 %>
-							<%= c.industry%> - <%= c.jobs.count %> Opportunities
+							 <%= c.jobs.count %> Opportunities
 						<% end %><br />
 					<% end %>
 						<%= simple_format( (truncate((c.info), :length=>200)) ) %>
