--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -4,7 +4,7 @@
 		<div class="span12">
 			<h3>Companies List</h3>
 			<p class="grey-text"> <%= Company.count %> companies which offer  
-				worthwhile grad and internship opportunities </p><br />
+				reputable grad and internship opportunities </p><br />
 		</div>
 	</div>	
 	<div class="row">
@@ -27,7 +27,7 @@
 		</div>
 		
 		<div class="span5 inform-user">
-			<div class="hero-unit">
+			<div class="hero-unit companies-sell">
 				Do a google search and see how this pages looks like it.<hr>
 				The familiarity will be good. This box will be used to educate the consumer about companies, our products and offerings
 			</div>
