quick change to homepage

--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,7 +1,26 @@
 <% cache do %>
 	<div>
+	
+		
 		<h1>Manage your job applications easier & find out what's really needed</h1>
 			</br>
+		
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="span4">
+					<h2><%= Job.count%> </h2>
+					<h4>Jobs Listed</h4>
+				</div>
+				<div class="span4">
+			 		<h2><%= Company.count %></h2>
+			 		<h4>Top-tier & Mid-tier reputable companies </h4>	
+				</div>
+				<div class="span4">
+				</div>
+			</div>
+		</div>
+		
+		<br />		
 		<h4>We've just opened up our website for UNSW students.</br> 
 			 Sign up with your zmail now.</h4>
 	</div>
