minor changes to display

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,6 +44,11 @@ $standard-shadow:0 4px 7px -5px $dark-grey;
 
 
 /* ========= SECTION: UNIVERSALS =========*/
+
+.background-white{
+	background-color:white;
+}
+
 body {
 	font-family: 'Noto Sans', sans-serif;	
 	font-size:13px;
