--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -13,9 +13,11 @@
 				</div>
 				<div class="span4">
 			 		<h2><%= Company.count %></h2>
-			 		<h4>Top-tier & Mid-tier reputable companies </h4>	
+			 		<h4>Top-tier & Mid-tier reputable companies</h4>	
 				</div>
 				<div class="span4">
+					<h4>Representing over 500 of the most sought after
+						internship and graduate spots in Sydney</h4>
 				</div>
 			</div>
 		</div>
