--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
 					
 					<% end %>
 					
-					<li class="pull-right">  Test</li>
+					<li class="pull-right">  Happy <%= Time.now.strftime("%A") %> ! &nbsp</li>
 					
 				</ul>
 			</div>
